# LichtFeld-Studio

./: CMakeLists.txt  vcpkg.json
.github/overlays/onnx/: fix-cmakelists.patch  fix-pr-7390.patch
.github/overlays/onnxruntime/: skip-avx-ne-convert-asm-on-linux.patch  skip-protobuf-in-moe-cuda-tu.patch
.github/workflows/: build-windows-development-portable.yml  build-windows-portable.yml  ubuntu.yml  windows.yml
docs/plugins/: api-reference.md
src/app/: application.cpp
src/core/: CMakeLists.txt  argument_parser.cpp  checkpoint_format.cpp  logger.cpp  parameters.cpp  splat_data.cpp
src/core/cuda/: CMakeLists.txt
src/core/include/core/: logger.hpp  parameters.hpp
src/core/tensor/: tensor.cpp
src/core/tensor/internal/: memory_pool.hpp  tensor_functors.hpp
src/geometry/: CMakeLists.txt
src/io/: CMakeLists.txt  cache_image_loader.cpp
src/io/formats/: colmap.cpp  nurec_usdz.cpp  ply.cpp  sogs.cpp
src/preprocessing/: preprocess.cpp
src/python/lfs/: module.cpp  py_rendering.cpp  py_ui.cpp  py_ui.hpp  py_ui_hooks.cpp  rml_im_mode_layout.hpp
src/python/lfs_plugins/: asset_index.py  asset_manager_integration.py  asset_manager_panel.py  asset_scanner.py  asset_thumbnails.py  import_panels.py  rendering_panel.py  select_menu.py  toolbar.py  training_panel.py  transform_controls.py
src/python/stubs/lichtfeld/: __init__.pyi  scene.pyi
src/python/stubs/lichtfeld/ui/: __init__.pyi
src/rendering/rasterizer/gsplat_fwd/: CMakeLists.txt  RasterizeToPixelsFromWorld3DGSFwd.cu
src/rendering/rasterizer/vulkan/shader/src/slang/: alphablend_shader.slang  cumsum.slang  utils.slang
src/rendering/rasterizer/vulkan/src/: config.h  gs_pipeline.cpp  gs_pipeline.h  gs_renderer.cpp  gs_renderer.h
src/tcp/: CMakeLists.txt  tcp_publisher.cpp  tcp_responder.cpp  tcp_server.cpp
src/tcp/include/: tcp_publisher.hpp  tcp_responder.hpp  tcp_server.hpp
src/training/: CMakeLists.txt  trainer.cpp  training_setup.cpp
src/training/control/: command_api.cpp
src/training/metrics/: metrics.hpp
src/training/rasterization/gsplat/: CMakeLists.txt  RasterizeToPixelsFromWorld3DGSBwd.cu  RasterizeToPixelsFromWorld3DGSFwd.cu
src/visualizer/: gui_capabilities.cpp  visualizer_impl.cpp  visualizer_impl.hpp
src/visualizer/core/: editor_context.cpp
src/visualizer/gui/: async_task_manager.cpp  gizmo_manager.cpp  gui_manager.cpp  gui_manager.hpp  panel_layout.cpp  panel_layout.hpp  panel_registry.cpp  rml_right_panel.cpp  rml_status_bar.cpp  rml_status_bar.hpp  rml_viewport_overlay.cpp  rml_viewport_overlay.hpp  vulkan_ui_texture.cpp
src/visualizer/gui/resources/locales/: de.json  en.json  es.json  fr.json  it.json  ja.json  ko.json  nl.json  pl.json  zh.json
src/visualizer/gui/rmlui/: rml_panel_host.cpp  rml_panel_host.hpp  rml_tooltip.cpp  rml_tooltip.hpp  rmlui_manager.cpp  rmlui_manager.hpp  rmlui_vk_backend.hpp
src/visualizer/gui/rmlui/elements/: scene_graph_element.cpp  scene_graph_element.hpp
src/visualizer/gui/rmlui/resources/: asset_manager.rcss  asset_manager.rml  asset_manager.theme.rcss  menubar.rcss  rendering.rcss  rendering.rml  rendering.theme.rcss  viewport_overlay.rcss  viewport_overlay.rml  viewport_overlay.theme.rcss
src/visualizer/gui/utils/: native_file_dialog.cpp  native_file_dialog.hpp
src/visualizer/include/visualizer/: gui_capabilities.hpp
src/visualizer/input/: frame_input_buffer.hpp  input_controller.cpp  input_controller.hpp
src/visualizer/internal/: viewport.hpp
src/visualizer/operation/: undo_entry.cpp
src/visualizer/rendering/: point_cloud_vulkan_renderer.cpp  point_cloud_vulkan_renderer.hpp  rendering_manager.cpp  rendering_manager.hpp  rendering_manager_viewport.cpp  rendering_manager_vulkan.cpp  viewport_request_builder.cpp  vksplat_viewport_renderer.cpp  vksplat_viewport_renderer.hpp
src/visualizer/rendering/passes/: vulkan_mesh_pass.cpp  vulkan_viewport_pass.cpp
src/visualizer/rendering/resources/viewport/: point_cloud.frag  point_cloud.vert
src/visualizer/scene/: scene_manager.cpp  scene_manager.hpp
src/visualizer/tools/: selection_tool.hpp
src/visualizer/window/: vulkan_context.cpp  vulkan_context.hpp  window_manager.cpp  window_manager.hpp
tests/: benchmark_reactive_store.cpp  test_logger.cpp  test_reactive_store.cpp  test_rendering_refactor_services.cpp  test_scene_validity.cpp  test_sdl_rml_key_mapping.cpp  test_vksplat_input_packer.cpp
tests/python/: test_asset_manager_panel.py  test_import_dialog_panels.py  test_menu_schemas.py  test_menubar_resources.py  test_toolbar_hooks.py  test_transform_controls_panel.py  test_viewport_overlay_hooks.py
